@@ -8,6 +8,7 @@ lintian-brush (0.16) UNRELEASED; urgency=medium
     error message when the copyright file does not use DEP5.
   * Add fixer debian-watch-file-is-missing.
   * Add a (hidden) --minimum-certainty option.
+  * Add experimental fixer for upstream-metadata-file-is-missing.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 23 Feb 2019 03:45:54 +0000
 
